--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -238,7 +238,7 @@
               "4  1600  "
             ]
           },
-          "execution_count": 54,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -415,7 +415,7 @@
               "4           1  0.24  0.2879  0.75        0.0       0           1    1  "
             ]
           },
-          "execution_count": 56,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -437,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -504,7 +504,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 62,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -516,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -525,7 +525,7 @@
               "0"
             ]
           },
-          "execution_count": 63,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -759,7 +759,7 @@
               "max    3410.000000  6946.000000  8714.000000  "
             ]
           },
-          "execution_count": 64,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -771,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -812,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -838,7 +838,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -850,7 +850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -859,7 +859,7 @@
               "0"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -871,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -1112,7 +1112,7 @@
               "max      977.000000  "
             ]
           },
-          "execution_count": 69,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1133,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 12,
       "metadata": {
         "id": "jVnYpprE9Evz"
       },
@@ -1146,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1156,7 +1156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1184,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1425,7 +1425,7 @@
               "std    1937.211452  "
             ]
           },
-          "execution_count": 102,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1437,7 +1437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1514,7 +1514,7 @@
               "1              500     8362   22  4584.820000  1878.415583"
             ]
           },
-          "execution_count": 103,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1529,7 +1529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -1651,7 +1651,7 @@
               "6               105     8714   627  4550.542857  2196.693009"
             ]
           },
-          "execution_count": 104,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1666,7 +1666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1743,7 +1743,7 @@
               "1            21     7403  1000  3735.000000  2103.350660"
             ]
           },
-          "execution_count": 107,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1758,7 +1758,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -1925,7 +1925,7 @@
               "12         62     6606   441  3403.806452  1549.639353"
             ]
           },
-          "execution_count": 108,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1940,7 +1940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -2190,7 +2190,7 @@
               "std        0.122340     49.305030    151.357286    181.387599  "
             ]
           },
-          "execution_count": 109,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2202,7 +2202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -2477,7 +2477,7 @@
               "23        728      256   2   87.831044   50.846889"
             ]
           },
-          "execution_count": 112,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2492,7 +2492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -2697,7 +2697,7 @@
               "[5 rows x 32 columns]"
             ]
           },
-          "execution_count": 113,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2716,7 +2716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -2790,7 +2790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 24,
       "metadata": {
         "id": "1swJUdAD8DC2"
       },
@@ -2833,7 +2833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 25,
       "metadata": {
         "id": "Go0lCsvO8DC2"
       },
@@ -2910,7 +2910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -2943,7 +2943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
@@ -3051,7 +3051,7 @@
               "[89 rows x 1 columns]"
             ]
           },
-          "execution_count": 123,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -3069,6 +3069,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "#save days_hours_df\n",
         "days_hours_df.to_csv('days_hours.csv', index=False)"
       ]
     }
@@ -3083,8 +3084,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.8.0 (tags/v3.8.0:fa919fd, Oct 14 2019, 19:21:23) [MSC v.1916 32 bit (Intel)]"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.0"
     },
     "orig_nbformat": 4,
     "vscode": {
